--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -73,6 +73,7 @@
     z-index: 5;
     background: #fff;
     padding: 10px 15px;
+    border-bottom: 1px solid #d2d2d2;
 }
 ._lndng2_mbl_menu_overlay{
     display: block;
@@ -250,8 +251,11 @@
     flex: 0 0 100%;
     padding: 0 0 11px;
 }
-._transtn_top_lft  {
-    margin-bottom: 13px;
+._transtn_top {
+    padding: 10px 10px;
+}
+._transtn_hstry_r8 .ivu-input-wrapper{
+    margin-bottom: 10px;
 }
 ._prfl_card1 {
     padding: 15px;
@@ -274,12 +278,12 @@
 ._indx_post_card {
     margin-top: 0;
 }
-._prfl_card1_info_btm ul {
+._prfl_card1_info_btm ul {       
     flex-wrap: wrap;
 }
 
-._indx_post_card_txt_lft{
-    flex: 0 0 100%;
+._indx_post_card_txt_lft{                 
+    flex: 0 0 100%;    
  }
  ._indx_post_card_txt_r8 {
     flex: 0 0 100%;
@@ -287,7 +291,7 @@
 }
 ._lndng2_banner_lft{
     padding-top:20px;
-}
+}                              
 ._lndng2_banner_lft h1 {
     font-size: 30px;
     line-height: 40px;
@@ -340,12 +344,12 @@
 }
 ._lndng2_txt1 {
     line-height: 26px;
-}
+}    
 ._lndng2_title1 {
     margin-bottom: 10px;
 }
 ._lndng2_abt_top {
-    margin-bottom: 50px;
+    margin-bottom: 50px;                        
 }
 ._lndng2_works {
     padding-top: 20px;
@@ -361,22 +365,22 @@
 }
 ._lndng2_feature_r8 {
     padding: 60px 0px 30px;
-}
+}                                                          
 ._lndng2_feature_r8 ul {
     padding: 0px;
 }
-._lndng2_feature_r8 ul li img {
-    margin-right: 10px;
-    width: 16px;
+._lndng2_feature_r8 ul li img {       
+    margin-right: 10px;       
+    width: 16px;                     
     height: 13px;
     margin-top: 4px;
 }
 ._lndng2_feature_r8 ul li p {
-    font-size: 17px;
+    font-size: 17px;        
     line-height: 20px;
 }
-._lndng2_feature_top {
-    margin-bottom: 30px;
+._lndng2_feature_top {                       
+    margin-bottom: 30px;                
 }
 ._lndng2_bsns {
     text-align: center;
@@ -387,7 +391,7 @@
     line-height: 29px;
 }
 ._lndng2_bsns h1 {
-    font-size: 35px;
+    font-size: 35px;                           
     line-height: 40px;
     margin-bottom: 15px;
 }
@@ -448,24 +452,126 @@
 ._lndng2_membership ul li:nth-child(3) {
     min-width: 160px;
 }
-._lndng2_membership ul li img{}
 ._lndng2_membership h1 {
     margin-bottom: 50px;
-    text-align: center;
+    text-align: center;          
 }
 ._lndng2_sbscrbr input {
     padding: 10px 150px 10px 20px;
-    width: 100%;
+    width: 100%;   
 }
-._lndng2_sbscrbr_sec {
-    padding: 60px 0px;
-}
+._lndng2_sbscrbr_sec {       
+    padding: 60px 0px;  
+}                                            
 ._lndng2_sbscrbr_sec_all {
-    padding-bottom: 80px;
-}
+    padding-bottom: 80px;                          
+}                                                
 ._lndng2_sbscrbr_top h1 {
-    margin-bottom: 30px;
+    margin-bottom: 30px;            
+}                
+._lndng2_footer_r8 {                 
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 20px;             
 }
+._lndng2_footer_btm_lft{
+    margin-bottom: 20px;
+}
+._lndng2_footer_btm {                                                     
+    display: block;
+    text-align: center;
+    margin-top: 40px;                             
+}
+._lndng2_footer_btm_r8 ul {
+    justify-content: center;
+}
+._lndng2_footer_r8_sngl {
+    width: auto;
+    margin-top: 20px;
+}
+._lndng2_footer_r8_titl {
+    margin-bottom: 15px;
+}
+._privacy_r8{
+    margin-top: 20px;
+}
+._lndng2_ftr_drpdwn {
+    top: 72px;
+}
+._transtn_tbl_bdy_row ul li {
+    padding-right: 10px;
+}
+._transtn_table_hd, ._transtn_tbl_bdy_row  {
+    min-width: 750px;
+}
+._sign_r8_all {
+    padding: 60px 40px 60px 50px;
+}
+._photo_main {
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 }
@@ -527,7 +633,115 @@
 ._menu_home ul li {
     padding: 10px 13px;
 }
-
-
+._landng_menu .container{
+    max-width: 745px;
+}
+._landng_menu_lft {
+    width: 140px;
+}
+._landng_menu_list ul li {
+    margin-right: 15px;
+}
+._landng_menu_list ul li a {
+    font-size: 16px;
+}
+._lndng2_banner_lft h1 {
+    font-size: 50px;
+    line-height: 60px;
+}
+._lndng2_banner {
+    padding: 20px 0px 0px;
+}
+._lndng2_banner_r8 img{
+    object-fit: cover;
+}
+._lndng2_banner_lft ul{
+    display: block;
+    text-align: center;
+}
+._lndng2_banner_lft ul li{
+    margin-bottom: 10px;
+}
+._lndng2_abt_top p {
+    width: 55%;
+}
+._lndng2_abt {
+    padding-top: 80px;
+}
+._lndng2_abt_top {
+    margin-bottom: 70px;
+}
+._lndng2_works {
+    padding-top: 20px;
+}
+._lndng2_feature_lft img{
+    object-fit: cover;
+}
+._lndng2_feature_r8 ul {
+    padding: 0px;
+}
+._lndng2_feature_r8 ul li p {
+    font-size: 19px;
+    line-height: 23px;
+}
+._lndng2_feature_r8 ul li img {
+    width: 15px;
+    height: 12px;
+    margin-right: 15px;
+}
+._lndng2_mbl_app_inner {
+    padding-left: 0px;
+}
+._lndng2_mbl_app_text {
+    padding-left: 40px;
+}
+._lndng2_mbl_app_text p {
+    width: 100%;
+}
+._lndng2_slider_sec {
+    padding: 80px 0px 80px;
+}
+._lndng2_slider {
+    margin-top: 60px;
+}
+._lndng2_membership ul {
+    padding: 0px 30px;
+}
+._lndng2_membership_sec {
+    padding: 80px 0px 100px;
+}
+._lndng2_footer_lft_btn {
+    width: auto;
+    height: 50px;
+}
+._lndng2_footer_lft_btn p {
+    font-size: 14px;
+}
+._lndng2_footer_lft_btn img {
+    width: 14.52px;
+    height: 20px;
+    margin-left: 10px;
+}
+._lndng2_footer_lft img {                  
+    width: auto;     
+}
+._lndng2_footer_r8_sngl ul li {
+    margin-bottom: 10px;                                                                                  
+}
+._lndng2_footer_r8_sngl ul li a {
+    font-size: 14px;
+}
+._lndng2_ftr_drpdwn {
+    top: 55px;
+}
+._prfl_cntnt_r8_all{
+    margin-top: 30px;
+}
+._prfl_card1_info_btm ul {
+    flex-wrap: wrap;
+}
+._prfl_card1_info_btm ul li {
+    margin-bottom: 15px;
+}
 
 }
