--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2035,6 +2035,7 @@ display: flex;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  padding-right: 20px;
 }
 ._transtn_tbl_bdy_row ul li:last-child span{
   margin-left: 25px;
@@ -2228,6 +2229,11 @@ display: flex;
 ._signUp_card_acnt a{
   font-size: 14px;
   color: #da1f26;
+}
+._sign_titl{
+    margin-bottom: 10px;
+      color: #222;
+      font-size: 33px;
 }
 /*===--- SIGN IN & SIGNUP ---===*/
 
@@ -6225,7 +6231,7 @@ background: #f5f8fb;
     overflow: hidden;
 }
 ._sign_all_lft_logo {
-    width: 126px;
+    width: 186px;
     height: auto;
     position: absolute;
     top: 40px;
@@ -6237,8 +6243,8 @@ background: #f5f8fb;
     overflow: hidden;
 }
 ._sign_all_img img {
-    -o-object-fit: cover;
-    object-fit: cover;
+  /*  -o-object-fit: cover;
+    object-fit: cover;*/
 }
 ._pad_r_0{
   padding-right: 0px;
@@ -6269,7 +6275,7 @@ background: #f5f8fb;
     line-height: 24px;
 }
 ._sign_r8_sngl{
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 ._sign_r8_sngl p{
   color: #353535;
@@ -6310,6 +6316,12 @@ background: #f5f8fb;
     font-size: 14px;
     color: #da1f26;
   }
+._forgot_pass a:hover{
+   color: #ce030a;
+}
+._signUp_card_acnt a:hover{
+   color: #ce030a;
+}
   ._forgt_pass{
     padding-top: 100px;
   }
@@ -6368,11 +6380,30 @@ background: #f5f8fb;
   color: #19264A;
   font-weight: 500;
 }
+._landng_menu_list ul{
+  align-items: center;
+}
 ._landng_menu_list ul li a:hover{
   color: #da1f26;
 }
 ._landng_menu_list ul ._active a{
   color: #da1f26;
+}
+._landng_menu_btn{
+      font-size: 12px !important;
+    line-height: 15px;
+    color: #FFFFFF;
+    width: 94px;
+    height: 32px;
+    background-color: #F15060  !important;
+     border-color: #F15060  !important;
+    border-radius: 10px;
+}
+._landng_menu_btn:hover {
+    background: #c3171c !important;
+    -webkit-transition: 0.3s ease all;
+    -o-transition: 0.3s ease all;
+    transition: 0.3s ease all;
 }
 ._lndng2_banner{
     background: #FBECF6;
@@ -6803,7 +6834,7 @@ background: #f5f8fb;
 }
 ._lndng2_ftr_drpdwn{
   position: absolute;
-  top:72px;
+  top:60px;
   left: 0px;
   width: 100%;
   height: 240px;
@@ -6814,6 +6845,7 @@ background: #f5f8fb;
       -webkit-box-shadow: 0 12px 28px 0 rgb(0 0 0 / 20%), 0 2px 4px 0 rgb(0 0 0 / 10%), inset 0 0 0 1px rgb(255 255 255 / 50%);
     box-shadow: 0 12px 28px 0 rgb(0 0 0 / 20%), 0 2px 4px 0 rgb(0 0 0 / 10%), inset 0 0 0 1px rgb(255 255 255 / 50%);
   display: none;
+  z-index: 3;
 }
 ._lndng2_ftr_drpdwn_active{
   display: block;
@@ -6857,9 +6889,12 @@ background: #f5f8fb;
 ._lndng2_footer_r8_sngl ul li a{
   display: inline-block;
   font-size: 16px;
-  line-height: 18px;
+  line-height: 20px;
   color: rgba(255, 255, 255, 0.7);
 }
+._lndng2_footer_lft_btn {
+    height: 60px;
+    }
 ._lndng2_footer_btm{
     -webkit-box-align: center;
         -ms-flex-align: center;
