--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6668,12 +6668,27 @@ background: #f5f8fb;
   padding: 80px 0px;
 }
 ._lndng2_bsns_sec {
-    background: url(../img/business_bg.png);
-    position: relative;
-    z-index: 1;
-    padding: 80px 0px;
-    background-repeat: no-repeat;
-    background-size: cover;
+  /* background: url(../img/business_bg.png); */
+  background: url(../img/bussness.svg);
+  position: relative;
+  z-index: 1;
+  padding: 80px 0px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: top right;
+}
+._lndng2_bsns_sec:after {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: -o-linear-gradient(359.56deg, #272727 -20.37%, rgba(196, 196, 196, 0) 108.29%);
+    background: linear-gradient(
+90.44deg
+, #272727 -20.37%, rgba(196, 196, 196, 0) 108.29%);
+    z-index: -1;
 }
 ._lndng2_bsns_sec:after{
   position: absolute;
