--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2234,6 +2234,7 @@ display: flex;
     margin-bottom: 10px;
       color: #222;
       font-size: 33px;
+      font-weight: bold;
 }
 /*===--- SIGN IN & SIGNUP ---===*/
 
