--- a/static/css/main.css
+++ b/static/css/main.css
@@ -339,13 +339,14 @@
     background: #da1f26;
     padding: 8px 18px;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     cursor: pointer;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     border-radius: 35px;
+    transition: .2s all ease;
     }
     ._menu_r8 ul li a:hover {
     background: #c3171c;
@@ -720,15 +721,16 @@
     }
     /*======= 6.Status box ======*/
     /* Status box */
-    ._card1_inpt input{
-    border: none;
-    background: #f0f0f0;
-    border-radius: 5px;
-    width: 100%;
-    height: 45px;
-    padding: 10px 15px;
-    color: #000;
-    font-size: 15px;
+    ._card1_inpt input {
+        border: none;
+        background: #f0f0f0;
+        border-radius: 5px;
+        width: 100%;
+        height: 45px;
+        padding: 10px 15px;
+        color: #000;
+        font-size: 15px;
+        cursor: text;
     }
     ._card1_btm ul li {
     display: -webkit-box;
@@ -1424,6 +1426,11 @@
             flex: 0 0 45px;
     width: 45px;
     }
+    ._blog2_card_img{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
     ._more:hover{
         color: #da1f26;
     }
@@ -1436,6 +1443,9 @@
             flex: 1 1;
     padding: 0 0 0 15px;
     overflow: hidden;
+    }
+    ._blog2_card_name:hover {
+        color: #da1f26;
     }
     ._blog2_card_name {
     font-size: 13px;
@@ -1853,6 +1863,7 @@
     transition: 0.3s ease all;
     color: #fff;
     background: #da1f26;
+    border: 1px solid #da1f26;
     }
     ._prfl_cntnt{
     padding: 30px;
@@ -1894,10 +1905,15 @@
     font-size: 14px;
     margin-left: 20px;
     }
+    ._transtn_top_r8 a:hover{
+        color: #fff;
+        background-color: #c3171c;
+    }
     ._transtn_top_r8 a{
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    transition: .2s all ease;
     border-radius: 4px;
     color: #fff;
     font-size: 13px;
@@ -5902,6 +5918,9 @@
     font-weight: 500;
     font-size: 16px;
     }
+    ._follow_card:first-child{
+        margin-top: 0px;
+    }
     ._follow_card {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -7191,6 +7210,27 @@
     ._notiPage_card_drop_text:hover {
         color: #da1f26;
     }
-    .{}
-    .{}
+    ._notiPage_card._active ._notiPage_title{
+        font-weight: bold;
+    }
+    ._notiPage_card._active ._notiPage_time{
+        font-weight: bold   ;
+    }
+    ._notiPage_more{
+    text-align: center;
+    padding: 11px 2px 7px;
+    border-top: 1px solid #eaeaea;
+    margin: 6px 0 0;
+}
+    ._notiPage_more_text:hover{
+        
+    color: #da1f26;
+    }
+    ._notiPage_more_text{
+    display: inline-block;
+    font-weight: bold;
+    color: #333;
+    cursor: pointer;
+    transition: .2s all ease;
+}
     /*============== 12.Notification page ============*/
