--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -216,8 +216,38 @@
 ._indx_post_lst ul li:last-child{
     margin-right: 0px;
 }             
-._left_sec {       
-    margin-top: 20px;
+._left_sec {
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+._statusBox{
+    margin-bottom: 20px;
+}
+._faq_right_title {
+    font-size: 17px;
+    margin: 26px 0 10px;
+}
+._faq_title {
+    font-size: 22px;
+    margin-bottom: 15px;
+}
+._2content {
+    padding-top: 88px;
+    min-height: calc(100vh - 117px);
+}
+._faq_banner_pic {
+    height: 350px;
+}
+._faq_banner_img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+._faq_banner_title {
+    font-size: 30px;
+}
+._footer_lft ul li:after, ._footer_r8 ul li:after {
+    left: -11px;
 }
 ._lndng2_footer_r8 {
     display: flex;
@@ -298,7 +328,19 @@
     padding: 15px;
 }
 ._indx_post_card_top_lft {
-    flex: 0 0 100%;
+    flex: 1 1;
+}
+._cardMulti_pic_main:first-child._cardMulti_pic_main:nth-last-child(2), ._cardMulti_pic_main:first-child._cardMulti_pic_main:nth-last-child(3), ._cardMulti_pic_main:first-child._cardMulti_pic_main:nth-last-child(4), ._cardMulti_pic_main:first-child._cardMulti_pic_main:nth-last-child(5), ._cardMulti_pic_main:nth-child(2)._cardMulti_pic_main:last-child, ._cardMulti_pic_main:nth-child(2)._cardMulti_pic_main:nth-last-child(2), ._cardMulti_pic_main:nth-child(2)._cardMulti_pic_main:nth-last-child(3), ._cardMulti_pic_main:nth-child(2)._cardMulti_pic_main:nth-last-child(4), ._cardMulti_pic_main:nth-child(3)._cardMulti_pic_main:nth-last-child(2), ._cardMulti_pic_main:nth-child(4)._cardMulti_pic_main:last-child {
+    height: 172px!important;
+}
+._indx_post_card_top_r8 ul {
+    flex-wrap: wrap;
+}
+._cardMulti_pic_main {
+    height: 90px;
+}
+._cardMulti_more_text {
+    font-size: 20px;
 }
 ._indx_post_card_top_titl {
     flex: 1 1;
@@ -307,8 +349,11 @@
     margin-top: 10px;
     flex: 0 0 100%;
 }
+._indx_post_lst{
+    margin-bottom: 20px;
+}
 ._indx_post_card_btm {
-    padding: 10px 15px;
+    padding: 10px 15px 0;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
